[project]
name = "failure_prob"
version = "0.1.0"
description = "Fork of SAFE: Multitask Failure Detection for Vision-Language-Action Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "flask>=3.1.2",
    "hydra-core>=1.3.2",
    "imageio[ffmpeg]>=2.37.2",
    "matplotlib>=3.10.8",
    "ml-dtypes>=0.5.4",
    "natsort>=8.4.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.13.0.90",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.2",
    "wandb>=0.24.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
